Updated all the rest htmls with respect to Bastille's menu.

--- a/html/menu-LeGourmand.html
+++ b/html/menu-LeGourmand.html
@@ -25,7 +25,8 @@
                 <i class="back-to-home fa-solid fa-arrow-left"></i>
             </a>
         </div>
-        <img class="bg-img" src="../images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="LeGourmand" />
+        <img class="bg-img" src="../images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
+            alt="LeGourmand" />
     </header>
 
     <main class="menu">
@@ -42,30 +43,54 @@
             <hr>
             <div class="menu__section__container">
                 <div class="menu__section__container__box menu__section__container__box--1">
-                    <div class="details">
-                        <h3>Tuna Carpaccio</h3>
-                        <p>Seasoned with yuzu</p>
-                    </div>
+                    <div class="slider">
+                        <div class="details">
+                            <h3>Tuna Carpaccio</h3>
+                            <p>Seasoned with yuzu</p>
+                        </div>
 
-                    <div class="price">25€</div>
+                        <div class="price">25€</div>
+
+                        <div class="check-box">
+                            <div class="circle-check">
+                                <i class="check fa-solid fa-check"></i>
+                            </div>
+                        </div>
+                    </div>
                 </div>
 
                 <div class="menu__section__container__box menu__section__container__box--2">
-                    <div class="details">
-                        <h3>Crunchy Lobster Croquets</h3>
-                        <p>With seasonal vegetables</p>
-                    </div>
+                    <div class="slider">
+                        <div class="details">
+                            <h3>Crunchy Lobster Croquets</h3>
+                            <p>With seasonal vegetables</p>
+                        </div>
 
-                    <div class="price">35€</div>
+                        <div class="price">35€</div>
+
+                        <div class="check-box">
+                            <div class="circle-check">
+                                <i class="check fa-solid fa-check"></i>
+                            </div>
+                        </div>
+                    </div>
                 </div>
 
                 <div class="menu__section__container__box menu__section__container__box--3">
-                    <div class="details">
-                        <h3>Mushroom Soup</h3>
-                        <p>With truffles</p>
-                    </div>
+                    <div class="slider">
+                        <div class="details">
+                            <h3>Mushroom Soup</h3>
+                            <p>With truffles</p>
+                        </div>
 
-                    <div class="price">20€</div>
+                        <div class="price">20€</div>
+
+                        <div class="check-box">
+                            <div class="circle-check">
+                                <i class="check fa-solid fa-check"></i>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
@@ -75,31 +100,56 @@
             <hr>
             <div class="menu__section__container">
                 <div class="menu__section__container__box menu__section__container__box--4">
-                    <div class="details">
-                        <h3>Roasted Chicken with Provincal Herbs</h3>
-                        <p>With truffle cream</p>
-                    </div>
+                    <div class="slider">
+                        <div class="details">
+                            <h3>Roasted Chicken with Provincal Herbs</h3>
+                            <p>With truffle cream</p>
+                        </div>
 
-                    <div class="price">40€</div>
+                        <div class="price">40€</div>
+
+                        <div class="check-box">
+                            <div class="circle-check">
+                                <i class="check fa-solid fa-check"></i>
+                            </div>
+                        </div>
+                    </div>
                 </div>
 
                 <div class="menu__section__container__box menu__section__container__box--5">
-                    <div class="details">
-                        <h3>Roasted Lobster</h3>
-                        <p>With seasonal vegetables</p>
-                    </div>
+                    <div class="slider">
+                        <div class="details">
+                            <h3>Roasted Lobster</h3>
+                            <p>With seasonal vegetables</p>
+                        </div>
 
-                    <div class="price">35€</div>
+                        <div class="price">35€</div>
+
+                        <div class="check-box">
+                            <div class="circle-check">
+                                <i class="check fa-solid fa-check"></i>
+                            </div>
+                        </div>
+                    </div>
                 </div>
 
                 <div class="menu__section__container__box menu__section__container__box--6">
-                    <div class="details">
-                        <h3>Angus Beef Ribs</h3>
-                        <p>With mashed parshnips</p>
-                    </div>
+                    <div class="slider">
+                        <div class="details">
+                            <h3>Angus Beef Ribs</h3>
+                            <p>With mashed parshnips</p>
+                        </div>
 
-                    <div class="price">44€</div>
+                        <div class="price">44€</div>
+
+                        <div class="check-box">
+                            <div class="circle-check">
+                                <i class="check fa-solid fa-check"></i>
+                            </div>
+                        </div>
+                    </div>
                 </div>
+
             </div>
         </section>
 
@@ -108,30 +158,54 @@
             <hr>
             <div class="menu__section__container">
                 <div class="menu__section__container__box menu__section__container__box--7">
-                    <div class="details">
-                        <h3>Assorted Dessert Plate</h3>
-                        <p>Chef's choice</p>
-                    </div>
+                    <div class="slider">
+                        <div class="details">
+                            <h3>Assorted Dessert Plate</h3>
+                            <p>Chef's choice</p>
+                        </div>
 
-                    <div class="price">18€</div>
+                        <div class="price">18€</div>
+
+                        <div class="check-box">
+                            <div class="circle-check">
+                                <i class="check fa-solid fa-check"></i>
+                            </div>
+                        </div>
+                    </div>
                 </div>
 
                 <div class="menu__section__container__box menu__section__container__box--8">
-                    <div class="details">
-                        <h3>Crème Brulée</h3>
-                        <p>Revisited</p>
-                    </div>
+                    <div class="slider">
+                        <div class="details">
+                            <h3>Crème Brulée</h3>
+                            <p>Revisited</p>
+                        </div>
 
-                    <div class="price">22€</div>
+                        <div class="price">22€</div>
+
+                        <div class="check-box">
+                            <div class="circle-check">
+                                <i class="check fa-solid fa-check"></i>
+                            </div>
+                        </div>
+                    </div>
                 </div>
 
                 <div class="menu__section__container__box menu__section__container__box--9">
-                    <div class="details">
-                        <h3>Tiramisu</h3>
-                        <p>With hazelnuts</p>
-                    </div>
+                    <div class="slider">
+                        <div class="details">
+                            <h3>Tiramisu</h3>
+                            <p>With hazelnuts</p>
+                        </div>
 
-                    <div class="price">23€</div>
+                        <div class="price">23€</div>
+
+                        <div class="check-box">
+                            <div class="circle-check">
+                                <i class="check fa-solid fa-check"></i>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
