--- a/html/menu-TheEnchantedPlate.html
+++ b/html/menu-TheEnchantedPlate.html
@@ -42,39 +42,71 @@
             <hr>
             <div class="menu__section__container">
                 <div class="menu__section__container__box menu__section__container__box--1">
-                    <div class="details">
-                        <h3>Foie Gras Ravioli</h3>
-                        <p>With truffle cream</p>
-                    </div>
+                    <div class="slider">
+                        <div class="details">
+                            <h3>Foie Gras Ravioli</h3>
+                            <p>With truffle cream</p>
+                        </div>
 
-                    <div class="price">25€</div>
+                        <div class="price">25€</div>
+
+                        <div class="check-box">
+                            <div class="circle-check">
+                                <i class="check fa-solid fa-check"></i>
+                            </div>
+                        </div>
+                    </div>
                 </div>
 
                 <div class="menu__section__container__box menu__section__container__box--2">
-                    <div class="details">
-                        <h3>Oscietra Caviar</h3>
-                        <p>With buckwheat blinis</p>
-                    </div>
+                    <div class="slider">
+                        <div class="details">
+                            <h3>Oscietra Caviar</h3>
+                            <p>With buckwheat blinis</p>
+                        </div>
 
-                    <div class="price">35€</div>
+                        <div class="price">35€</div>
+
+                        <div class="check-box">
+                            <div class="circle-check">
+                                <i class="check fa-solid fa-check"></i>
+                            </div>
+                        </div>
+                    </div>
                 </div>
 
                 <div class="menu__section__container__box menu__section__container__box--3">
-                    <div class="details">
-                        <h3>Lobster and Leek Foam</h3>
-                        <p>Marinated with orange zest</p>
-                    </div>
+                    <div class="slider">
+                        <div class="details">
+                            <h3>Lobster and Leek Foam</h3>
+                            <p>Marinated with orange zest</p>
+                        </div>
 
-                    <div class="price">20€</div>
+                        <div class="price">20€</div>
+
+                        <div class="check-box">
+                            <div class="circle-check">
+                                <i class="check fa-solid fa-check"></i>
+                            </div>
+                        </div>
+                    </div>
                 </div>
 
                 <div class="menu__section__container__box menu__section__container__box--4">
-                    <div class="details">
-                        <h3>Duck Foie Gras</h3>
-                        <p>With fig jam and grilled baguette</p>
-                    </div>
+                    <div class="slider">
+                        <div class="details">
+                            <h3>Duck Foie Gras</h3>
+                            <p>With fig jam and grilled baguette</p>
+                        </div>
 
-                    <div class="price">35€</div>
+                        <div class="price">35€</div>
+
+                        <div class="check-box">
+                            <div class="circle-check">
+                                <i class="check fa-solid fa-check"></i>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
@@ -84,30 +116,54 @@
             <hr>
             <div class="menu__section__container">
                 <div class="menu__section__container__box menu__section__container__box--5">
-                    <div class="details">
-                        <h3>Fresh Buttered Scallops</h3>
-                        <p>With white celery puree</p>
-                    </div>
+                    <div class="slider">
+                        <div class="details">
+                            <h3>Fresh Buttered Scallops</h3>
+                            <p>With white celery puree</p>
+                        </div>
 
-                    <div class="price">40€</div>
+                        <div class="price">40€</div>
+
+                        <div class="check-box">
+                            <div class="circle-check">
+                                <i class="check fa-solid fa-check"></i>
+                            </div>
+                        </div>
+                    </div>
                 </div>
 
                 <div class="menu__section__container__box menu__section__container__box--6">
-                    <div class="details">
-                        <h3>Pan-Fried Lobster</h3>
-                        <p>With mashed sweet potatoes</p>
-                    </div>
+                    <div class="slider">
+                        <div class="details">
+                            <h3>Pan-Fried Lobster</h3>
+                            <p>With mashed sweet potatoes</p>
+                        </div>
 
-                    <div class="price">35€</div>
+                        <div class="price">35€</div>
+
+                        <div class="check-box">
+                            <div class="circle-check">
+                                <i class="check fa-solid fa-check"></i>
+                            </div>
+                        </div>
+                    </div>
                 </div>
 
                 <div class="menu__section__container__box menu__section__container__box--7">
-                    <div class="details">
-                        <h3>Braised Ox Tail</h3>
-                        <p>With wild rice and lemon zest</p>
-                    </div>
+                    <div class="slider">
+                        <div class="details">
+                            <h3>Braised Ox Tail</h3>
+                            <p>With wild rice and lemon zest</p>
+                        </div>
 
-                    <div class="price">44€</div>
+                        <div class="price">44€</div>
+
+                        <div class="check-box">
+                            <div class="circle-check">
+                                <i class="check fa-solid fa-check"></i>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
@@ -117,30 +173,54 @@
             <hr>
             <div class="menu__section__container">
                 <div class="menu__section__container__box menu__section__container__box--8">
-                    <div class="details">
-                        <h3>Chocolate and Hazelnut Macaroon</h3>
-                        <p>With caramel butter ice cream</p>
-                    </div>
+                    <div class="slider">
+                        <div class="details">
+                            <h3>Chocolate and Hazelnut Macaroon</h3>
+                            <p>With caramel butter ice cream</p>
+                        </div>
 
-                    <div class="price">18€</div>
+                        <div class="price">18€</div>
+
+                        <div class="check-box">
+                            <div class="circle-check">
+                                <i class="check fa-solid fa-check"></i>
+                            </div>
+                        </div>
+                    </div>
                 </div>
 
                 <div class="menu__section__container__box menu__section__container__box--9">
-                    <div class="details">
-                        <h3>Baba au rhum</h3>
-                        <p>With lemon drizzle</p>
-                    </div>
+                    <div class="slider">
+                        <div class="details">
+                            <h3>Baba au rhum</h3>
+                            <p>With lemon drizzle</p>
+                        </div>
 
-                    <div class="price">22€</div>
+                        <div class="price">22€</div>
+
+                        <div class="check-box">
+                            <div class="circle-check">
+                                <i class="check fa-solid fa-check"></i>
+                            </div>
+                        </div>
+                    </div>
                 </div>
 
                 <div class="menu__section__container__box menu__section__container__box--10">
-                    <div class="details">
-                        <h3>Lemon Meringue Pie</h3>
-                        <p>Destructured</p>
-                    </div>
+                    <div class="slider">
+                        <div class="details">
+                            <h3>Lemon Meringue Pie</h3>
+                            <p>Destructured</p>
+                        </div>
 
-                    <div class="price">23€</div>
+                        <div class="price">23€</div>
+
+                        <div class="check-box">
+                            <div class="circle-check">
+                                <i class="check fa-solid fa-check"></i>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
