--- a/html/menu-TheFullPlate.html
+++ b/html/menu-TheFullPlate.html
@@ -42,30 +42,54 @@
             <hr>
             <div class="menu__section__container">
                 <div class="menu__section__container__box menu__section__container__box--1">
-                    <div class="details">
-                        <h3>Escargot</h3>
-                        <p>With southern French spices</p>
-                    </div>
+                    <div class="slider">
+                        <div class="details">
+                            <h3>Escargot</h3>
+                            <p>With southern French spices</p>
+                        </div>
 
-                    <div class="price">25€</div>
+                        <div class="price">25€</div>
+
+                        <div class="check-box">
+                            <div class="circle-check">
+                                <i class="check fa-solid fa-check"></i>
+                            </div>
+                        </div>
+                    </div>
                 </div>
 
                 <div class="menu__section__container__box menu__section__container__box--2">
-                    <div class="details">
-                        <h3>Duck Foie Gras</h3>
-                        <p>With black truffle shavings</p>
-                    </div>
+                    <div class="slider">
+                        <div class="details">
+                            <h3>Duck Foie Gras</h3>
+                            <p>With black truffle shavings</p>
+                        </div>
 
-                    <div class="price">35€</div>
+                        <div class="price">35€</div>
+
+                        <div class="check-box">
+                            <div class="circle-check">
+                                <i class="check fa-solid fa-check"></i>
+                            </div>
+                        </div>
+                    </div>
                 </div>
 
                 <div class="menu__section__container__box menu__section__container__box--3">
-                    <div class="details">
-                        <h3>Fried Egg</h3>
-                        <p>Seasoned with truffle cream and...</p>
-                    </div>
+                    <div class="slider">
+                        <div class="details">
+                            <h3>Fried Egg</h3>
+                            <p>Seasoned with truffle cream and...</p>
+                        </div>
 
-                    <div class="price">20€</div>
+                        <div class="price">20€</div>
+
+                        <div class="check-box">
+                            <div class="circle-check">
+                                <i class="check fa-solid fa-check"></i>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
@@ -75,30 +99,54 @@
             <hr>
             <div class="menu__section__container">
                 <div class="menu__section__container__box menu__section__container__box--4">
-                    <div class="details">
-                        <h3>Herb-Encrusted Steak</h3>
-                        <p>With delicately sliced and seasoned veg...</p>
-                    </div>
+                    <div class="slider">
+                        <div class="details">
+                            <h3>Herb-Encrusted Steak</h3>
+                            <p>With delicately sliced and seasoned veg...</p>
+                        </div>
 
-                    <div class="price">40€</div>
+                        <div class="price">40€</div>
+
+                        <div class="check-box">
+                            <div class="circle-check">
+                                <i class="check fa-solid fa-check"></i>
+                            </div>
+                        </div>
+                    </div>
                 </div>
 
                 <div class="menu__section__container__box menu__section__container__box--5">
-                    <div class="details">
-                        <h3>Ox Tail Shepard's Pie</h3>
-                        <p>With black truffle and pureed parsnips</p>
-                    </div>
+                    <div class="slider">
+                        <div class="details">
+                            <h3>Ox Tail Shepard's Pie</h3>
+                            <p>With black truffle and pureed parsnips</p>
+                        </div>
 
-                    <div class="price">35€</div>
+                        <div class="price">35€</div>
+
+                        <div class="check-box">
+                            <div class="circle-check">
+                                <i class="check fa-solid fa-check"></i>
+                            </div>
+                        </div>
+                    </div>
                 </div>
 
                 <div class="menu__section__container__box menu__section__container__box--6">
-                    <div class="details">
-                        <h3>Filet of Sole</h3>
-                        <p>With citrus dressing</p>
-                    </div>
+                    <div class="slider">
+                        <div class="details">
+                            <h3>Filet of Sole</h3>
+                            <p>With citrus dressing</p>
+                        </div>
 
-                    <div class="price">44€</div>
+                        <div class="price">44€</div>
+
+                        <div class="check-box">
+                            <div class="circle-check">
+                                <i class="check fa-solid fa-check"></i>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
@@ -108,30 +156,54 @@
             <hr>
             <div class="menu__section__container">
                 <div class="menu__section__container__box menu__section__container__box--7">
-                    <div class="details">
-                        <h3>Paris-Brest</h3>
-                        <p>Revisited</p>
-                    </div>
+                    <div class="slider">
+                        <div class="details">
+                            <h3>Paris-Brest</h3>
+                            <p>Revisited</p>
+                        </div>
 
-                    <div class="price">18€</div>
+                        <div class="price">18€</div>
+
+                        <div class="check-box">
+                            <div class="circle-check">
+                                <i class="check fa-solid fa-check"></i>
+                            </div>
+                        </div>
+                    </div>
                 </div>
 
                 <div class="menu__section__container__box menu__section__container__box--8">
-                    <div class="details">
-                        <h3>Cholocate Macaroons</h3>
-                        <p>With vanilla ice cream</p>
-                    </div>
+                    <div class="slider">
+                        <div class="details">
+                            <h3>Cholocate Macaroons</h3>
+                            <p>With vanilla ice cream</p>
+                        </div>
 
-                    <div class="price">22€</div>
+                        <div class="price">22€</div>
+
+                        <div class="check-box">
+                            <div class="circle-check">
+                                <i class="check fa-solid fa-check"></i>
+                            </div>
+                        </div>
+                    </div>
                 </div>
 
                 <div class="menu__section__container__box menu__section__container__box--9">
-                    <div class="details">
-                        <h3>Chocolate Mousse</h3>
-                        <p>With spices and black truffle</p>
-                    </div>
+                    <div class="slider">
+                        <div class="details">
+                            <h3>Chocolate Mousse</h3>
+                            <p>With spices and black truffle</p>
+                        </div>
 
-                    <div class="price">23€</div>
+                        <div class="price">23€</div>
+
+                        <div class="check-box">
+                            <div class="circle-check">
+                                <i class="check fa-solid fa-check"></i>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
