--- a/html/menu-Bastille.html
+++ b/html/menu-Bastille.html
@@ -3,29 +3,29 @@
 
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <title>Menu for Bastille</title>
 
     <script src="https://kit.fontawesome.com/b56242c928.js" crossorigin="anonymous"></script>
 
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Shrikhand&display=swap" />
+        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Shrikhand&display=swap">
 
-    <link rel="stylesheet" href="../css/main.css" />
+    <link rel="stylesheet" href="../css/main.css">
 </head>
 
 <body>
     <header>
         <div class="logo">
-            <img class="logo-img" src="../images/logo/ohmyfood.png" alt="ohmyfood" />
+            <img class="logo-img" src="../images/logo/ohmyfood.png" alt="ohmyfood">
             <a href="../index.html" class="back-to-home-icon">
                 <i class="back-to-home fa-solid fa-arrow-left"></i>
             </a>
         </div>
-        <img class="bg-img" src="../images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Bastille" />
+        <img class="bg-img" src="../images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Bastille">
     </header>
 
     <main class="menu">
@@ -148,6 +148,7 @@
                         </div>
                     </div>
                 </div>
+            </div>
         </section>
 
         <section class="menu__section">
