--- a/index.html
+++ b/index.html
@@ -1,161 +1,160 @@
 <!DOCTYPE html>
-<lang="en">
+<html lang="en">
 
-	<head>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-		<title>Home Page</title>
+	<title>Home Page</title>
 
-		<script src="https://kit.fontawesome.com/b56242c928.js" crossorigin="anonymous"></script>
+	<script src="https://kit.fontawesome.com/b56242c928.js" crossorigin="anonymous"></script>
 
-		<link rel="preconnect" href="https://fonts.googleapis.com" />
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-		<link rel="stylesheet"
-			href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Shrikhand&display=swap" />
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link rel="stylesheet"
+		href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Shrikhand&display=swap">
 
-		<link rel="stylesheet" href="css/main.css" />
-	</head>
+	<link rel="stylesheet" href="css/main.css">
+</head>
 
-	<body>
-		<div class="page">
-			<div class="spinner"></div>
+<body>
+	<div class="page">
+		<div class="spinner"></div>
+	</div>
+
+	<header>
+		<div class="logo">
+			<img src="images/logo/ohmyfood.png" alt="ohmyfood">
 		</div>
 
-		<header>
-			<div class="logo">
-				<img src="images/logo/ohmyfood.png" alt="ohmyfood" />
+		<div class="location">
+			<i class="fa-solid fa-location-dot"></i>
+			Paris, Belleville
+		</div>
+
+		<div class="intro">
+			<div class="intro__title">
+				<h1>Book the menu you like</h1>
 			</div>
-
-			<div class="location">
-				<i class="fa-solid fa-location-dot"></i>
-				Paris, Belleville
+			<div class="intro__content">
+				<p>Discover top-of-the-art restaurants we picked for you</p>
 			</div>
+			<button class="intro__button">Explore our restaurants</button>
+		</div>
+	</header>
 
-			<div class="intro">
-				<div class="intro__title">
-					<h1>Book the menu you like</h1>
-				</div>
-				<div class="intro__content">
-					<p>Discover top-of-the-art restaurants we picked for you</p>
-				</div>
-				<button class="intro__button">Explore our restaurants</button>
-			</div>
-		</header>
+	<section class="procedures">
+		<h2>How it works</h2>
+		<div class="procedures__container">
+			<div class="procedures__container__box">
+				<div class="step">1</div>
 
-		<section class="procedures">
-			<h2>How it works</h2>
-			<div class="procedures__container">
-				<div class="procedures__container__box">
-					<div class="step">1</div>
-
-					<div class="icon">
-						<i class="fa-solid fa-mobile-screen-button fa-lg"></i>
-					</div>
-
-					<p>Choose a restaurant</p>
+				<div class="icon">
+					<i class="fa-solid fa-mobile-screen-button fa-lg"></i>
 				</div>
 
-				<div class="procedures__container__box">
-					<div class="step">2</div>
+				<p>Choose a restaurant</p>
+			</div>
 
-					<div class="icon">
-						<i class="fa-solid fa-list-ul"></i>
-					</div>
+			<div class="procedures__container__box">
+				<div class="step">2</div>
 
-					<p>Create your menu</p>
+				<div class="icon">
+					<i class="fa-solid fa-list-ul"></i>
 				</div>
 
-				<div class="procedures__container__box" class="procedures__container__box--longer">
-					<div class="step">3</div>
+				<p>Create your menu</p>
+			</div>
 
-					<div class="icon">
-						<i class="fa-solid fa-store"></i>
-					</div>
+			<div class="procedures__container__box procedures__container__box--longer">
+				<div class="step">3</div>
 
-					<p>Go enjoy it at the restaurant</p>
+				<div class="icon">
+					<i class="fa-solid fa-store"></i>
 				</div>
+
+				<p>Go enjoy it at the restaurant</p>
 			</div>
-		</section>
+		</div>
+	</section>
 
-		<section class="restaurants">
-			<h2>Restaurants</h2>
-			<div class="restaurants__wrap">
-				<a href="html/menu-TheFullPlate.html" class="card">
-					<img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="The Full Palette" />
-					<div class="label">New</div>
-					<div class="card__info">
-						<h3>The Full Palette</h3>
-						<p>New York</p>
-					</div>
-					<div class="like-icon">
-						<i class="heart fa-regular fa-heart"></i>
-						<i class="heart solid-heart fa-solid fa-heart"></i>
-					</div>
-				</a>
+	<section class="restaurants">
+		<h2>Restaurants</h2>
+		<div class="restaurants__wrap">
+			<a href="html/menu-TheFullPlate.html" class="card">
+				<img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="The Full Palette">
+				<div class="label">New</div>
+				<div class="card__info">
+					<h3>The Full Palette</h3>
+					<p>New York</p>
+				</div>
+				<div class="like-icon">
+					<i class="heart fa-regular fa-heart"></i>
+					<i class="heart solid-heart fa-solid fa-heart"></i>
+				</div>
+			</a>
 
-				<a href="html/menu-TheEnchantedPlate.html" class="card">
-					<img class="enchanted-img" src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
-						alt="The Enchanted Plate">
-					<div class="label">New</div>
-					<div class="card__info">
-						<h3>The Enchanted Plate</h3>
-						<p>New York</p>
-					</div>
-					<div class="like-icon">
-						<i class="heart fa-regular fa-heart"></i>
-						<i class="heart solid-heart fa-solid fa-heart"></i>
-					</div>
-				</a>
+			<a href="html/menu-TheEnchantedPlate.html" class="card">
+				<img class="enchanted-img" src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
+					alt="The Enchanted Plate">
+				<div class="label">New</div>
+				<div class="card__info">
+					<h3>The Enchanted Plate</h3>
+					<p>New York</p>
+				</div>
+				<div class="like-icon">
+					<i class="heart fa-regular fa-heart"></i>
+					<i class="heart solid-heart fa-solid fa-heart"></i>
+				</div>
+			</a>
 
-				<a href="html/menu-Bastille.html" class="card">
-					<img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Bastille">
-					<div class="card__info">
-						<h3>Bastille</h3>
-						<p>New York</p>
-					</div>
-					<div class="like-icon">
-						<i class="heart fa-regular fa-heart"></i>
-						<i class="heart solid-heart fa-solid fa-heart"></i>
-					</div>
-				</a>
+			<a href="html/menu-Bastille.html" class="card">
+				<img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Bastille">
+				<div class="card__info">
+					<h3>Bastille</h3>
+					<p>New York</p>
+				</div>
+				<div class="like-icon">
+					<i class="heart fa-regular fa-heart"></i>
+					<i class="heart solid-heart fa-solid fa-heart"></i>
+				</div>
+			</a>
 
-				<a href="html/menu-LeGourmand.html" class="card">
-					<img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Le Gourmand">
-					<div class="card__info">
-						<h3>Le Gourmand</h3>
-						<p>New York</p>
-					</div>
-					<div class="like-icon">
-						<i class="heart fa-regular fa-heart"></i>
-						<i class="heart solid-heart fa-solid fa-heart"></i>
-					</div>
-				</a>
-			</div>
-		</section>
+			<a href="html/menu-LeGourmand.html" class="card">
+				<img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Le Gourmand">
+				<div class="card__info">
+					<h3>Le Gourmand</h3>
+					<p>New York</p>
+				</div>
+				<div class="like-icon">
+					<i class="heart fa-regular fa-heart"></i>
+					<i class="heart solid-heart fa-solid fa-heart"></i>
+				</div>
+			</a>
+		</div>
+	</section>
 
-		<footer>
-			<h2>ohmyfood</h2>
-			<ul class="links">
-				<li class="link">
-					<i class="utensils fa-solid fa-utensils"></i>
-					<a href="#">Suggest a restaurant</a>
-				</li>
+	<footer>
+		<h2>ohmyfood</h2>
+		<ul class="links">
+			<li class="link">
+				<i class="utensils fa-solid fa-utensils"></i>
+				<a href="#">Suggest a restaurant</a>
+			</li>
 
-				<li class="link">
-					<i class="handshake-angle fa-solid fa-handshake-angle"></i>
-					<a href="#">Become a partner</a>
-				</li>
+			<li class="link">
+				<i class="handshake-angle fa-solid fa-handshake-angle"></i>
+				<a href="#">Become a partner</a>
+			</li>
 
-				<li class="link">
-					<a href="#">Legal</a>
-				</li>
+			<li class="link">
+				<a href="#">Legal</a>
+			</li>
 
-				<li class="link">
-					<a href="mailto:zwz108@gmail.com">Contact</a>
-				</li>
-			</ul>
-		</footer>
+			<li class="link">
+				<a href="mailto:zwz108@gmail.com">Contact</a>
+			</li>
+		</ul>
+	</footer>
 
-	</body>
-	</lang>
+</body>
